--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
@@ -15,6 +17,7 @@
                 <h1 class="shadow">
                     Muhammadali Movies
                 </h1>
+                <img class="images" src="./image/photo_2022-11-24_20-41-24.jpg" alt="image">
             </nav>
         </div>
     </header>
@@ -25,7 +28,7 @@
                     <div class="col-md-3 p-3 bg-white m-1 shadow">
                         <form action="#">
                             <label for="film_name" class="w-100 my-2">
-                            <input type="text" placeholder="Enter film name..." class="form-control p-3">
+                            <input type="text" id="search" placeholder="Enter film name..." class="form-control p-3">
                         </label>
                         <label for="film_name" class="w-100 my-2">
                             <input type="number" min="1" max="10" placeholder="Enter film reyting..." class="form-control p-3">
@@ -54,7 +57,7 @@
     </main>
 
 
-    <div class="wrapper"></div>
+    
     <script src="./db.js"></script>
     <script src="./utilit.js"></script>
     <script src="./main.js"></script>
